--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
         </activity>
         <activity android:name=".ViewActivity">
         </activity>
+        <activity android:name=".MapsActivity">
+        </activity>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
